<resources>
    <string name="app_name">Okul Duyuru Sistemi</string>
    <string name="btn_giris">GİRİŞ YAP</string>
    <string name="btn_kayitOl">Kayıt Ol</string>
    <string name="ogrenciNo">Öğrenci No:</string>
    <string name="password">Şifre:</string>
    <string name="confirmPassword">Şifrenizi Onaylayın:</string>
    <string name="kayitliDegil">Kayıtlı değil misin?</string>
    <string name="kayitli">Zaten bir hesabın var mı?</string>
    <string name="girisYap">Giriş Yap</string>
    <string name="kayitliDegil2">KAYIT OL</string>
    <string name="adSoyad">Ad Ve Soyad:</string>
    <string name="soyad">Soyad:</string>
    <string name="eMail">E-Posta:</string>
    <string name="bolum">Bölümünüzü Seçiniz:</string>
    <string-array name="bolumler">
        <item>Adalet Programı</item>
        <item>Anestezi Programı</item>
        <item>Anestezi Programı(İÖ)</item>
        <item>Aşçılık Programı</item>
        <item>Aşçılık Programı(İÖ)</item>
        <item>Bankacılık ve Sigortacılık Programı</item>
        <item>Bankacılık ve Sigortacılık Programı(İÖ)</item>
        <item>Basım ve Yayın Teknolojileri Programı</item>
        <item>Bilgisayar Programcılığı</item>
        <item>Bilgisayar Programcılığı(İÖ)</item>
        <item>Çocuk Gelişimi Programı</item>
        <item>Çocuk Gelişimi Programı(İÖ)</item>
        <item>Dış Ticaret Programı</item>
        <item>Elektrik Programı</item>
        <item>Elektrik Teknolojisi Programı</item>
        <item>Fizyoterapi Programı</item>
        <item>Fizyoterapi Programı(İÖ)</item>
        <item>Grafik Tasarımı</item>
        <item>Grafik Tasarımı(İÖ)</item>
        <item>Halkla İlişkiler ve Tanıtım Programı</item>
        <item>İlk ve Acil Yardım Programı</item>
        <item>İlk ve Acil Yardım Programı(İÖ)</item>
        <item>İnsan Kaynakları Yönetimi</item>
        <item>İnşaat Teknolojisi Programı</item>
        <item>İnşaat Teknolojisi Programı(İÖ)</item>
        <item>İş Sağlığı ve Güvenliği Programı</item>
        <item>İş Sağlığı ve Güvenliği Programı(İÖ)</item>
        <item>İşletme Yönetimi Programı</item>
        <item>Lojistik Programı</item>
        <item>Makine Programı</item>
        <item>Mimari Restorasyon Programı</item>
        <item>Mimari Restorasyon Programı(İÖ)</item>
        <item>Moda Tasarımı Programı</item>
        <item>Muhasebe ve Vergi Uygulamaları Programı</item>
        <item>Optisyenlik Programı</item>
        <item>Optisyenlik Programı(İÖ)</item>
        <item>Radyo ve Televizyon Programcılığı Programı</item>
        <item>Radyo ve Televizyon Programcılığı Programı(İÖ)</item>
        <item>Sağlık Kurumları İşletmeciliği Programı</item>
        <item>Sivil Hava Ulaştırma İşletmeciliği Programı</item>
        <item>Sivil Hava Ulaştırma İşletmeciliği Programı(İÖ)</item>
        <item>Sivil Havacılık Kabin Hizmetleri Programı</item>
        <item>Sivil Havacılık Kabin Hizmetleri Programı(İÖ)</item>
        <item>Tıbbi Dokümantasyon ve Sekreterlik Programı</item>
        <item>Tıbbi Dokümantasyon ve Sekreterlik Programı(İÖ)</item>
        <item>Tıbbi Görüntüleme Teknikleri Programı</item>
        <item>Tıbbi Görüntüleme Teknikleri Programı(İÖ)</item>
        <item>Tıbbi Laboratuvar Teknikleri Programı</item>
        <item>Tıbbi Laboratuvar Teknikleri Programı(İÖ)</item>
        <item>Turist Rehberliği Programı</item>
        <item>Turist Rehberliği Programı(İÖ)</item>
        <item>Turizm ve Otel İşletmeciliği Programı</item>
        <item>Uçak Teknolojisi Programı</item>
        <item>Uygulamalı İngilizce ve Çevirmenlik Programı</item>
        <item>Uygulamalı İngilizce ve Çevirmenlik Programı(İÖ)</item>
    </string-array>
    <string name="hosgeldin">Hoşgeldin!</string>
    <string name="duyurular">Duyurular</string>
    <string name="mesajlasma">Mesajlaşma</string>
    <string name="arelweb">Arel Web</string>
    <string name="etkinlikler">Etkinlikler</string>
    <string name="ogretmenGiris">Öğretmen Girişi</string>
    <string name="ogretmenId">Öğretmen ID:</string>
    <string name="kayitliDegil3">Kayıtlı Değil Misiniz?</string>
    <string name="kayitli2">Zaten bir hesaba sahip misiniz?</string>
    <string name="popUp">X</string>
    <string name="bilgiMesaji">Eğer bir Öğretmen ID\ye sahip değilseniz, kendi ID numaranız hakkında okulumuzun
        Bilgisayar Programcılığı Bölüm başkanından bilgi alabilirsiniz.</string>
    <string name="bilgiMesajiKapat">KAPAT</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="duyuruEkle">Duyuru Ekle</string>
    <string name="duyuruGuncelle">Duyuru Güncelle</string>
    <string name="duyuruSil">Duyuru Sil</string>
    <string name="beniHatirla">Beni Hatırla</string>
    <string name="duyuruBolum">Bölüm seçiniz:</string>
    <string name="duyuruYayinlama">Duyuru Yayınlama Paneli</string>
    <string name="duyuruBaslik">Duyuru Başlığı:</string>
    <string name="duyuruIcerik">Duyuru İçeriği:</string>
    <string name="duyuruBildirim">Öğrencilere duyurunuzun bildirimi gönderilsin mi?</string>
    <string name="duyuruYayinla">DUYURU YAYINLA</string>
    <string name="author">Yazar:</string>
    <string name="recycler_item_baslik">Duyuru Başlığı:</string>
    <string name="recycler_item_date">Date</string>
    <string name="recycler_item_yazar">Yazar</string>
    <string name="recycler_item_time">Time</string>
    <string name="duyuruUpdate">DUYURU GÜNCELLEME PANELİ</string>
    <string name="guncelleButton">Duyuruyu Güncelle</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialogSoru">Duyuruyu silmek istediğinizden emin misiniz?</string>
    <string name="dialogEvet">EVET</string>
    <string name="dialogHayir">HAYIR</string>
    <string name="chatBirSeyYaz">Bir şeyler yazın</string>


</resources>