<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorLogin"
    tools:context=".UI.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:src="@drawable/arel"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:civ_border_color="@color/borderColor"
            app:civ_border_width="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_ogrenciNo"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@color/colorWhite"
            android:maxLength="9"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="@string/ogrenciNo"/>

        <EditText
            android:id="@+id/edittext_adsoyad"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="@string/adSoyad" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:hint="@string/eMail"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/edittext_confirmpassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:inputType="textPassword"
            android:maxLength="10"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:hint="@string/confirmPassword"/>

        <Spinner
            android:id="@+id/spinnerBolum"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@color/spinnerColor"
            android:hint="@string/bolum"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnKayit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:text="@string/btn_kayitOl"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/kayitli"/>

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:textStyle="bold"
            android:textColor="@color/girisYapText"
            android:text="@string/girisYap"
            android:onClick="girisYap"/>
    </LinearLayout>



</LinearLayout>