<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="5dp"
    android:background="#D1C558">
    
    <TextView
        android:id="@+id/ac_dialog_txtYazi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogSoru"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/ac_dialog_btnEvet"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/dialogEvet"
        android:layout_marginTop="@dimen/_10sdp" />

    <Button
        android:id="@+id/ac_dialog_btnHayir"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/dialogHayir"
        android:layout_marginStart="@dimen/_140sdp"
        android:layout_marginTop="-50dp"/>

</LinearLayout>