<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorLogin">
    <!-- Gravity:Nesneyi bulunduğu layout’a göre ortalar -->
    <!-- match_parent:Yatay olarak nesne ekranı kaplar. -->
    <!-- wrap_content:Yatay olarak nesne içinde yer alan text veya img kadar yer kaplar. -->
    <!--
    LinearLayout’da ögeler sırasıyla ekrana dizilir ve dizilime en yukarıdan aşağıya doğru gerçekleşir.
    Android xml ekranında ki nesneleri tek bir yönde yatay veya dikey olarak konumlandırmamıza olanak sağlar.
    Android:orientation özelliğini kullanarak yatay (horizontal) veya dikey(vertical) olarak konumlandırabiliriz.
    -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:src="@drawable/arel"
        android:layout_marginTop="160dp"
        app:civ_border_color="#111111"
        app:civ_border_width="2dp" />

    <EditText
        android:id="@+id/edittext_ogrenciNo"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"
        android:maxLength="9"
        android:inputType="number"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/ogrenciNo"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:paddingLeft="2dp"
        android:inputType="textPassword"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="10dp"
        android:hint="@string/password"/> <!-- Promp Text -->

    <Button
        android:id="@+id/btnGiris"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:text="@string/btn_giris"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/kayitliDegil"/>

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="2dp"
            android:textStyle="bold"
            android:textColor="#FCFCFC"
            android:text="@string/kayitliDegil2"
            android:onClick="kayitOl"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnOgretmenGiris"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorButton"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:text="@string/ogretmenGiris"/>

</LinearLayout>