<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorLogin">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:src="@drawable/arel"
        android:layout_marginTop="160dp"
        app:civ_border_color="#111111"
        app:civ_border_width="2dp" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <EditText
        android:id="@+id/edittext_ogretmenEmail"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/eMail"/>

    <EditText
        android:id="@+id/edittext_ogretmenPassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:paddingLeft="2dp"
        android:inputType="textPassword"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="10dp"
        android:hint="@string/password"/>

  </LinearLayout>

  <Button
      android:id="@+id/btnGiris"
      android:layout_width="190dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:background="@color/colorButton"
      android:textSize="15sp"
      android:textColor="#ffffff"
      android:text="@string/btn_giris"/>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textColor="#ffffff"
        android:text="@string/kayitliDegil3"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="3dp"
        android:textStyle="bold"
        android:textColor="#FCFCFC"
        android:text="@string/kayitliDegil2"
        android:onClick="kayitOl"/>
  </LinearLayout>

</LinearLayout>