<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/colorWhite"
        android:text="@string/popUp"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circlebackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/information"
            android:layout_marginTop="70dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bilgiMesaji"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:layout_marginTop="40dp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bilgiMesajiKapat"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/colorWhite"
        android:id="@+id/btnClose"/>

</LinearLayout>