<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    app:cardElevation="@dimen/_15sdp">

    <RelativeLayout
        android:id="@+id/ac_items_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundDuyurular">
        
        <TextView
            android:id="@+id/ac_cv_duyuru_baslik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler_item_baslik"
            android:textAlignment="textStart"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ac_cv_duyuru_context"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_below="@+id/ac_cv_duyuru_baslik"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_4sdp" />

        <TextView
            android:id="@+id/ac_cv_duyuru_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler_item_date"
            android:textAlignment="textEnd"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ac_cv_duyuru_yazar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ac_cv_duyuru_context"
            android:text="@string/recycler_item_yazar"
            android:textAlignment="textStart"
            android:textSize="@dimen/_16sdp"
            android:textStyle="normal"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ac_cv_duyuru_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ac_cv_duyuru_context"
            android:text="@string/recycler_item_time"
            android:textAlignment="textEnd"
            android:textSize="@dimen/_16sdp"
            android:textStyle="normal"
            android:textColor="@color/black" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>